--- a/sample_app/test/fixtures/users.yml
+++ b/sample_app/test/fixtures/users.yml
@@ -5,6 +5,12 @@ michael:
     admin: true
     activated: true
     activated_at: <%= Time.zone.now %>
+inactive:
+    name: Inactive User
+    email: inactive@example.com
+    password_digest: <%= User.digest('password') %>
+    admin: false
+    activated: false
 archer:
     name: Sterling Archer
     email: duchess@example.gov
